This commit was manufactured by cvs2svn to create tag 'gphoto2-2_1_4-release'.
git-svn-id: https://svn.code.sf.net/p/gphoto/code/tags/gphoto2-2_1_4-release/gphoto2@7064 67ed7778-7388-44ab-90cf-0a291f65f57c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-18  Hans Ulrich Niedermann <gp@n-dimensional.de>
+
+	* configure.in: Release 2.1.4
+
 2004-01-04  Christophe Barbe <christophe@ufies.org>
 
 	Patch by Terran Melconian <terran@consistent.org>:
