--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-26  Hubert Figuiere  <hfiguiere@teaser.fr>
+
+	* configure.in: version 2.1.5rc1
+
 2004-09-11  Marcus Meissner  <marcus@jet.franken.de>
 
 	* gphoto2/actions.[ch],main.c: Added
